--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "~2.15.0",
     "react-native-unimodules": "~0.12.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "styled-components": "^5.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
