--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "~2.15.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "*",
     "react-native-unimodules": "~0.12.0",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "^0.13.18",
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
